# Django_projects

./: .gitignore  README.md
django-youtube-restapi-project/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
django-youtube-restapi-project/.github/workflows/: checks.yml
django-youtube-restapi-project/app/: .flake8
django-youtube-restapi-project/app/app/: settings.py
membership/: day03_challenge.ipynb  pyproject.toml
membership/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
membership/accounts/migrations/: 0001_initial.py
membership/addresses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
membership/addresses/migrations/: 0001_initial.py
membership/config/: settings.py  urls.py
pyburger/: pyproject.toml
pyburger/burgers/: admin.py  apps.py  models.py
pyburger/burgers/migrations/: 0001_initial.py
pyburger/config/: settings.py  urls.py  views.py
pyburger/templates/: burger_list.html  burger_search.html  main.html
pylog/: pyproject.toml
pylog/blog/: admin.py  models.py  views.py
pylog/blog/migrations/: 0001_initial.py  0002_rename_post_posts.py  (+2 more)
pylog/config/: settings.py  urls.py
pylog/templates/: index.html  post_add.html  post_detail.html  post_list.html
pystagram/: 123.md  pyproject.toml
pystagram/config/: settings.py  urls.py  views.py
pystagram/posts/: admin.py  forms.py  models.py  urls.py  views.py
pystagram/templates/: _base.html  base.html  base_nav.html  base_profile.html  base_slider.html  index.html
pystagram/users/: admin.py  forms.py  models.py  urls.py  views.py
(+23 files in other folders)
